--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </div>
   <div id="container">
     <aside id="top-left"><h2>Demon Killa</h2></aside>
-    <aside id="top-right"><h2 id="movement"></h2></aside>
+    <aside id="top-right"><h2 id="playerHealth"></h2></aside>
     <main>
         <canvas id="game"><!-- play it, a game --></canvas>
     </main>
-    <aside id="btm-left"><h2>something</h2></aside>
-    <aside id="btm-right"><h2 id="status"></h2></aside>
+    <aside id="btm-left"><h2 id='demonHealth2'></h2></aside>
+    <aside id="btm-right"><h2 id="demonHealth"></h2></aside>
   </div>
   <div class="gameover" id="gameover">
     <h1>Game Over</h1>
