[project1] debugged fireBullet function, that uses same bullet to render in different locations and reuse

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <main>
         <canvas id="game"><!-- play it, a game --></canvas>
     </main>
-    <aside id="btm-left"><h2 id='demonHealth2'></h2></aside>
-    <aside id="btm-right"><h2 id="demonHealth"></h2></aside>
+    <aside id="btm-right"><h2 id='demonHealth2'></h2><h2 id="demonHealth"></h2></aside>
   </div>
   <div class="gameover" id="gameover">
     <h1>Game Over</h1>
