[project1] css style, info, win game function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <div class="menu" id="menu">
     <h1>Demon Killa</h1>
     <button class="instructions" id="instructions">Instructions</button>
+    <div class="info" id='info'>
+     <p>
+       Use left and right arrow keys to move player across x axis
+      </p>
+      <p>use space to shoot</p>
+      <p>kill all the demons to win</p>
+      <button id="close">Close</button>
+    </div>
     <button class="start" id="start">Start Game</button>
   </div>
   <div id="container">
